// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree-select/demo/basic.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled ant-select-allow-clear"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="ant-select-selection ant-select-selection--single"
  >
    <span
      class="ant-select-selection__rendered"
    >
      <span
        class="ant-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="ant-select-arrow"
      style="outline:none"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/checkable.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled"
  role="combobox"
  style="width:300px"
  tabindex="-1"
>
  <span
    class="ant-select-selection ant-select-selection--multiple"
  >
    <ul
      class="ant-select-selection__rendered"
    >
      <li
        class="ant-select-selection__choice"
        role="menuitem"
        style="user-select:none;-webkit-user-select:none"
        title="Node1"
        unselectable="unselectable"
      >
        <span
          class="ant-select-selection__choice__remove"
        >
          <i
            aria-label="icon: close"
            class="anticon anticon-close ant-select-remove-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#close"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-select-selection__choice__content"
        >
          Node1
        </span>
      </li>
      <li
        class="ant-select-search ant-select-search--inline"
      >
        <span
          class="ant-select-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="ant-select-search__field"
            type="text"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="ant-select-search__field__placeholder"
      style="display:none"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/multiple.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled ant-select-allow-clear"
  role="combobox"
  style="width:300px"
  tabindex="-1"
>
  <span
    class="ant-select-selection ant-select-selection--multiple"
  >
    <ul
      class="ant-select-selection__rendered"
    >
      <li
        class="ant-select-search ant-select-search--inline"
      >
        <span
          class="ant-select-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="ant-select-search__field"
            type="text"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="ant-select-search__field__placeholder"
      style="display:block"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/suffix.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled ant-select-allow-clear"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="ant-select-selection ant-select-selection--single"
  >
    <span
      class="ant-select-selection__rendered"
    >
      <span
        class="ant-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="ant-select-arrow"
      style="outline:none"
    >
      <i
        aria-label="icon: smile"
        class="anticon anticon-smile"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#smile"
          />
        </svg>
      </i>
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/treeData.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="ant-select-selection ant-select-selection--single"
  >
    <span
      class="ant-select-selection__rendered"
    >
      <span
        class="ant-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="ant-select-arrow"
      style="outline:none"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </span>
</span>
`;
